# ailab

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  compose.yaml  pyproject.toml
ansible/: README.md  ansible.cfg  requirements.yml
config/: sources.compose.yaml  sources.local.yaml
cookbook/: README.md
datasets/: README.md  retrieval-eval-v1.yaml  retrieval-eval-v2.yaml
docs/: README.md  ai-core-01-plan.md  ai-lab-improvement-audit.md  ai-node-01-discovery.md  architecture.md  assistant-optimization-plan.md  cross-lab-integration.md  data-governance.md  gpu-passthrough-runbook.md  grounded-orchestrator.md  hardware-and-placement.md  kubernetes-strategy.md  model-gateway.md  open-webui.md  operating-model.md  platform-contracts.md  (+6 more)
services/lab-status-assistant/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/lab-status-assistant/src/lab_status_assistant/: __init__.py  app.py  collect_kubernetes_snapshot.py  collect_prometheus_snapshot.py  collect_proxmox_snapshot.py  embeddings.py  evaluation.py  index.py  kubernetes.py  main.py  memory.py  models.py  orchestrator.py  postgres.py  prometheus.py  proxmox.py  secrets.py  settings.py
services/lab-status-assistant/tests/: test_api.py  test_evaluation.py  test_index.py  test_kubernetes.py  test_memory.py  test_prometheus.py  test_proxmox.py  test_secrets.py
services/research-gateway/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/research-gateway/src/ailab_research_gateway/: __init__.py  app.py  fetch.py
services/research-gateway/tests/: test_app.py  test_fetch.py
(+176 files in other folders)
