[project]
name = "lab-status-assistant"
version = "0.1.0"
description = "Read-only, citation-first knowledge API for the AI, home, and cyber labs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastembed>=0.8,<0.9",
  "fastapi>=0.116,<1",
  "psycopg[binary]>=3.2,<4",
  "pyyaml>=6.0.2,<7",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "httpx2>=2.7,<3",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
lab-status-assistant = "lab_status_assistant.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_status_assistant"]
