[project]
name = "ailab-research-gateway"
version = "0.2.0"
description = "Authenticated, SSRF-resistant retrieval and document-extraction gateway."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.12,<4",
  "fastapi>=0.139,<1",
  "pydantic>=2.11,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ailab_research_gateway"]
